# Agentic-Financial-Analyzer

./: .env.example  .gitignore  README.md  benchmark.py  docker-compose.yml  render.yaml  skills-lock.json
backend/: Dockerfile  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 9fb2a5070554_prototype_baseline.py
backend/app/: config.py  database.py  models.py  observability.py  schemas.py  seed.py
backend/app/agent/: memory.py  react_agent.py  tools.py
backend/app/routes/: analytics.py  auth.py  query.py
backend/tests/: conftest.py  test_migrations.py  test_observability.py  test_smoke.py
docs/architecture/: agent-design.md  architecture-decisions.md  current-state.md  data-model.md  domain-model.md  ingestion-design.md  security-model.md  target-state.md
docs/execution/: dependency-graph.md  epics.md  implementation-tasks.md  migration-plan.md  test-strategy.md
docs/product/: feature-catalog.md  roadmap.md  vision.md
frontend/: Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  server.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatPanel.tsx  DashboardCharts.tsx  Hero3DBackground.tsx  LogoIcon.tsx
frontend/src/lib/: api.ts
